# BOSSVectorizationCoordinatorEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Scripts/: build.sh
Source/: BOSSNoopEngine.cpp  BOSSVectorizationCoordinatorEngine.cpp  config.cpp  config.hpp  memoryPool.hpp
Tests/: BOSSTests.cpp
